# td-shim-Intel

.github/workflows/: main.yml
cc-measurement/src/: log.rs
devtools/dev_container/: Dockerfile
devtools/td-benchmark/: Cargo.toml
devtools/td-layout-config/: Cargo.toml
devtools/test-runner-client/: Cargo.toml
devtools/test-runner-server/: Cargo.toml
doc/: custom_nrx_image.md
sh_script/: test_custom_nrx_image_build.sh
td-exception/: Cargo.toml
td-layout/: Cargo.toml
td-loader/: Cargo.toml
td-logger/: Cargo.toml
td-paging/: Cargo.toml
td-payload/: Cargo.toml
td-shim-interface/: Cargo.toml
td-shim-tools/: Cargo.toml
td-shim-tools/etc/: sample-td-info-payload-layout.json  sample_nrx_image_template.json  sample_nrx_physical_memory.json  sample_td_params.json  test_layout_template.json  test_metadata_config.json  test_metadata_invalid.json
td-shim-tools/src/: enroller.rs  image.rs  lib.rs  linker.rs  metadata.rs  public_key.rs  signer.rs  tee_info_hash.rs
td-shim-tools/tests/: image-layout-gen-test.rs  metadata-gen-test.rs  patch-test.rs
tdx-tdcall/: Cargo.toml
tests/test-td-exception/: Cargo.toml
tests/test-td-paging/: Cargo.toml
tests/test-td-payload/: Cargo.toml
xtask/src/: build.rs
